<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/inputColor"
        android:padding="5dp"
        android:text="@string/auto_start_permission"
        android:textAlignment="center"
        android:textColor="@color/fontColor"
        android:textSize="20sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/fontColor" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/permission_description"
        android:textColor="@color/inputColor" />

    <CheckBox
        android:id="@+id/cb_id_dont_show_it_again"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dont_show_it_again"
        android:textColor="@color/inputColor" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/fontColor" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:weightSum="2">

        <Button
            android:id="@+id/btn_id_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@drawable/customize_button"
            android:text="@string/cancel"
            android:textColor="@color/fontColor" />

        <Button
            android:id="@+id/btn_id_settings"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/customize_button"
            android:text="@string/settings"
            android:textColor="@color/fontColor" />
    </LinearLayout>
</LinearLayout>