<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="rj.engineerbkinfotech.EngineerLogin"
        android:orientation="vertical"
        android:background="@drawable/black1"
        android:gravity="center_vertical"
        android:paddingStart="50dp"
        android:paddingLeft="50dp"
        android:paddingEnd="50dp"
        android:paddingRight="50dp"
        >
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:id="@+id/et_id_username"
        android:inputType="text"
        android:maxLines="1"
        android:layout_gravity="center"
        android:textColor="@color/inputColor"
        android:textColorHint="#8394ab"
        android:textSize="18sp"
        android:drawableLeft="@drawable/username20"
        android:drawableStart="@drawable/username20"
        android:drawablePadding="5dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/customize_edit_text"
        android:textCursorDrawable="@drawable/cursor_color"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_id_password"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:drawableLeft="@drawable/password20"
        android:drawableStart="@drawable/password20"
        android:maxLines="1"
        android:layout_gravity="center"
        android:textColor="@color/inputColor"
        android:textColorHint="#8394ab"
        android:textSize="18sp"
        android:drawablePadding="5dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/customize_edit_text"
        android:textCursorDrawable="@drawable/cursor_color"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_id_error"
        android:visibility="gone"
        android:textColor="@color/errorColor"
        android:layout_marginBottom="15dp"
        android:layout_gravity="center"
        android:textSize="16sp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_id_submit"
        android:text="@string/login"
        android:background="@drawable/customize_button"
        android:layout_gravity="center"
        android:layout_marginBottom="15dp"
        android:textColor="@color/fontColor"
        android:textSize="16sp"
        />



</LinearLayout>





